Update countdown header and target date

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </style>
 </head>
 <body>
-  <h1>Countdown bis zur Adressfreigabe</h1>
+  <h1>Adressfreigabe in</h1>
   <div id="countdown"></div>
 
   <div id="adresse">
@@ -87,7 +87,7 @@
 
   <script>
     // Zielzeit: 13. November 2025, 15:00 Uhr (lokale Zeit)
-    const targetDate = new Date("November 13, 2025 10:57:00").getTime();
+    const targetDate = new Date("November 13, 2025 16:00:00").getTime();
     const countdownEl = document.getElementById("countdown");
 
     let lastSeconds = null;
